--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-spinner></app-spinner>
 <app-navbar></app-navbar>
 <!-- <hr> -->
 <div class="container">
@@ -7,20 +8,5 @@
         </div>
 
 
-        <!-- <div class="col-6">
-            <app-contact></app-contact>
-        </div> -->
-        <!-- <div class="col-6">
-            <app-contact-reactive></app-contact-reactive>
-        </div> -->
     </div>
 </div>
-<!-- Interolacion -->
-<!-- <p>{{title}}</p>
-<p>Total: {{5 + 5}}</p>
-
-<img src="" alt=""> -->
-
-<!-- Componente perzonalizado -->
-<!-- <app-button></app-button>
-<app-button></app-button> -->
