--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,12 +1,12 @@
 <ul class="list-group">
-    <li class="list-group-item mt-1" (click)="onCitySelected(city)"
-        [ngClass]="{'active': city._id ===  selection._id}"
+    <li class="list-group-item mt-1" (click)="onCitySelected(_city)"
+        [ngClass]="{'active': _city.name ===  _selection.name}"
         >
-        {{ city.name | titlecase}}
+        {{ _city.name | titlecase}}
         <button
             type="button"
             class="btn btn-danger float-end"
-            (click)="onCityDelete(city._id)"
+            (click)="onCityDelete(_city._id)"
         >Delete</button>
 
     </li>
