--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,17 @@
 ul {
     list-style-type: none;
 }
+
+.overlay{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: gray;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.8;
+    
+
+}
