--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,13 +9,20 @@
             <input type="text" class="form-control" placeholder="Filter..." [(ngModel)]="criteria">
         </div>
         <div class="col-md-8">
+        <ng-container *ngIf="cities.length > 1; else templateEmpty">        
                 <app-cities *ngFor="let city of (cities | filter:criteria)"
                     (cityDeleteEvent)="onCityDelete($event)"
                     (citySelectedEvent)="onCitySelected($event)"
                     [_city]="city" [_selection]="selection">
                 </app-cities>
+        </ng-container>
         </div>
-        <div class="row" style="justify-content: space-between;">
+
+        <ng-template #templateEmpty>
+            We don´t have cities xd
+        </ng-template>
+        <!-- <div class="row" style="justify-content: space-between;">
+            
         <app-card>
             <div card-header>Header</div>
             <div card-body>Body</div>
@@ -29,17 +36,19 @@
         <app-card>
             <div card-header>Header</div>
             <div card-body>Body</div>
-
         </app-card><br> <br>
-        </div>
+    
+        </div> -->
+
         <div class="col-md-4">
-            <div *ngIf="selection?.name">
+            <ng-container *ngIf="selection?.name">
                 <p>Your city is: {{selection.name}}</p>
                 <!-- <button (click)="onClear()">Clear yout selection</button> -->
                 <!-- Componente perzonalizado -->
-                <app-button (click)="onClear()" [color]="'blue'" [label]="'Clear your selection'"></app-button>
+                <app-button (click)="onClear()" [color]="'blue'" [label]="'Clear your selection'">                    
+                </app-button>
 
-            </div>
+            </ng-container>
 
         </div>
     </div>
