--- a/src/app/form-new-item/form-new-item.component.html
+++ b/src/app/form-new-item/form-new-item.component.html
@@ -7,12 +7,16 @@
         </div>
 
         <div class="col-auto">
-            <input type="text" id="newItem" name="newItem" class="form-control" #newItem>
+            <input type="text" id="newItem" name="newItem" class="form-control" [ngModel]="selection.name" #newItem>
         </div>
         <div class="col-auto">
-            <button (click)="onAddNewItem(newItem.value)" type="button" class="btn btn-primary" [ngClass]="[className]">Add {{label}}</button>
+            <button *ngIf="!selection?.name" (click)="onAddNewItem()" type="button" 
+                class="btn" [ngClass]="[className]">Add {{label}}</button>
+            
+            <button *ngIf="selection?.name" (click)="onUpdateItem()" type="button" 
+                class="btn" [ngClass]="[className]">Update {{label}}</button>
         </div>
-
+ 
     </div>
 </form>
 <!-- <p>Count: {{counterRender()}}</p> -->
