--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,12 @@
 
 
     </div>
+    <app-modal></app-modal>
+    <button type="button" class="btn btn-primary" (click)="open()">
+        Launch demo modal
+      </button>
+    <!-- Button trigger modal -->
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+    </button> -->
 </div>
