--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -6,7 +6,7 @@
         <button
             type="button"
             class="btn btn-danger float-end"
-            (click)="onCityDelete(_city._id)"
+            (click)="onCityDelete(_city.id)"
         >Delete</button>
 
     </li>
