--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,36 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 my-3">
-            <app-form-new-item [selection]="selection" (newItemEvent)="addNewCity($event)" [label]="'City'"
-                 [className]="'btn-info'">
-            </app-form-new-item>
-        </div>
-        <div class="col-md-6 my-3">
-            <input type="text" class="form-control" placeholder="Filter..." [(ngModel)]="criteria">
-        </div>
-        <div class="col-md-8">
-        <ng-container *ngIf="cities.length > 1; else templateEmpty">        
-                <app-cities *ngFor="let city of (cities | filter:criteria)"
-                    (cityDeleteEvent)="onCityDelete($event)"
-                    (citySelectedEvent)="onCitySelected($event)"
-                    [_city]="city" [_selection]="selection">
-                </app-cities>
-        </ng-container>
-        </div>
-
-        <ng-template #templateEmpty>
-            We don´t have cities xd
-        </ng-template>
-        <!-- <div class="row" style="justify-content: space-between;">
-            
-        <app-card>
-            <div card-header>Header</div>
-            <div card-body>Body</div>
-
-        </app-card> <br> <br>
-        <app-card>
-            <div card-header>Header</div>
-            <div card-body>Body</div>
-
-        </app-card><br> <br>
-        <app-card>
-            <div card-header>Header</div>
-            <div card-body>Body</div>
-        </app-card><br> <br>
-    
-        </div> -->
-
-        <div class="col-md-4">
-            <ng-container *ngIf="selection?.name">
-                <p>Your city is: {{selection.name}}</p>
-                <!-- <button (click)="onClear()">Clear yout selection</button> -->
-                <!-- Componente perzonalizado -->
-                <app-button (click)="onClear()" [color]="'blue'" [label]="'Clear your selection'">                    
-                </app-button>
-
-            </ng-container>
-
-        </div>
+  <div class="row">
+    <div class="col-md-6 my-3">
+      <app-form-new-item [selection]="selection" (newItemEvent)="addNewCity($event)" [label]="'City'"
+        [className]="'btn-info'">
+      </app-form-new-item>
     </div>
+    <div class="col-md-6 my-3">
+      <input type="text" class="form-control" placeholder="Filter..." [(ngModel)]="criteria">
+    </div>
+    <div class="col-md-8">
+      <ng-container *ngIf="cities.length > 1; else templateEmpty">
+        <app-cities *ngFor="let city of (cities | filter:criteria)" (cityDeleteEvent)="onCityDelete($event)"
+          (citySelectedEvent)="onCitySelected($event)" [_city]="city" [_selection]="selection">
+        </app-cities>
+      </ng-container>
+    </div>
+
+    <ng-template #templateEmpty>
+      We don´t have cities xd
+    </ng-template>
+
+    <div class="col-md-4">
+      <ng-container *ngIf="selection?.name">
+        <p>Your city is: {{selection.name}}</p>
+        <!-- <button (click)="onClear()">Clear yout selection</button> -->
+        <!-- Componente perzonalizado -->
+        <app-button (click)="onClear()" [color]="'blue'" [label]="'Clear your selection'">
+        </app-button>
+
+      </ng-container>
+
+    </div>
+  </div>
 
 </div>
